--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 liv smells
+
+There is nothing here at the moment
+in the meantime. Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a>
+or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.
