--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-liv smells
+liv smells<br>
 
-There is nothing here at the moment
+There is nothing here at the moment.
 in the meantime. Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a>
 or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.
