--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-liv smells<br>
+liv is a nerd<br>
 
 There is nothing here at the moment.
 in the meantime. Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a>
