--- a/stats/index.html
+++ b/stats/index.html
@@ -4,38 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obliviosa Subathon</title>
-    <style>
-        body {
-            background-color: #333;
-            color: #fff;
-            font-family: Arial, sans-serif;
-        }
-        h1, h2 {
-            color: #f8c471;
-        }
-        img {
-            width: 100%;
-            max-width: 600px;
-            height: auto;
-            display: block;
-            margin: auto;
-        }
-        ol {
-            list-style-position: inside;
-            padding-left: 0;
-        }
-        li {
-            margin-bottom: 5px;
-        }
-        strong {
-            font-weight: bold;
-            color: #27ae60;
-        }
-        em {
-            font-style: italic;
-            color: #e74c3c;
-        }
-    </style>
+<style>
+    body {
+        background: linear-gradient(to bottom right, #004225, #333);
+        color: #fff;
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    h1, h2 {
+        color: #f8c471;
+    }
+    img {
+        width: 100%;
+        max-width: 600px;
+        height: auto;
+        display: block;
+        margin: auto;
+    }
+    ol {
+        list-style-position: inside;
+        padding-left: 0;
+    }
+    li {
+        margin-bottom: 5px;
+    }
+    strong {
+        font-weight: bold;
+        color: #27ae60;
+    }
+    em {
+        font-style: italic;
+        color: #e74c3c;
+    }
+    p, ol {
+        margin: 15px;
+    }
+</style>
 </head>
 <body>
     <h1>Obliviosa Subathon (29th - 30th September 2023)</h1>
