--- a/stats/index.html
+++ b/stats/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obliviosa Subathon</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap" rel="stylesheet">
 <style>
     body {
-        background: linear-gradient(to bottom right, #004225, #333);
+        background: linear-gradient(to bottom right, #004225 40%, #000000);
         color: #fff;
         font-family: Arial, sans-serif;
         margin: 0;
@@ -14,17 +17,18 @@
     }
     h1, h2 {
         color: #f8c471;
+        padding-left: 15px;
     }
     img {
         width: 100%;
-        max-width: 600px;
+        max-width: 1200px;  /* Increasing the max-width */
         height: auto;
         display: block;
         margin: auto;
     }
     ol {
         list-style-position: inside;
-        padding-left: 0;
+        padding-left: 15px;
     }
     li {
         margin-bottom: 5px;
@@ -39,6 +43,7 @@
     }
     p, ol {
         margin: 15px;
+        padding-left: 15px;  /* Added padding to the left */
     }
 </style>
 </head>
