--- a/stats/index.html
+++ b/stats/index.html
@@ -4,50 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obliviosa Subathon</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap" rel="stylesheet">
-<style>
-    body {
-        background: linear-gradient(to bottom right, #004225 40%, #000000);
-        color: #fff;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
-    h1, h2 {
-        color: #f8c471;
-        padding-left: 15px;
-    }
-    img {
-        width: 100%;
-        max-width: 1200px;  /* Increasing the max-width */
-        height: auto;
-        display: block;
-        margin: auto;
-    }
-    ol {
-        list-style-position: inside;
-        padding-left: 15px;
-    }
-    li {
-        margin-bottom: 5px;
-    }
-    strong {
-        font-weight: bold;
-        color: #27ae60;
-    }
-    em {
-        font-style: italic;
-        color: #e74c3c;
-    }
-    p, ol {
-        margin: 15px;
-        padding-left: 15px;  /* Added padding to the left */
-    }
-</style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        body {
+            background: linear-gradient(to bottom right, #004225 40%, #000000);
+            color: #fff;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .icons {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+        }
+        .icons a {
+            color: #f8c471;
+            margin-left: 10px;
+            font-size: 24px;
+            text-decoration: none;
+        }
+        h1, h2 {
+            color: #f8c471;
+            padding-left: 15px;
+        }
+        img {
+            width: 100%;
+            max-width: 1200px;
+            height: auto;
+            display: block;
+            margin: auto;
+        }
+        ol, p {
+            padding-left: 15px;
+            margin: 15px;
+        }
+        li {
+            margin-bottom: 5px;
+        }
+        strong {
+            font-weight: bold;
+            color: #27ae60;
+        }
+        em {
+            font-style: italic;
+            color: #e74c3c;
+        }
+        footer {
+            background-color: #004225;
+            padding: 15px;
+            text-align: center;
+            font-size: 14px;
+            color: #f8c471;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
 <body>
+    <div class="icons">
+        <a href="https://twitch.tv/obliviosaofficial" target="_blank" title="Obliviosa on Twitch">
+            <i class="fab fa-twitch"></i>
+        </a>
+        <a href="https://instagram.com/obliviosaofficial" target="_blank" title="Obliviosa on Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+    </div>
     <h1>Obliviosa Subathon (29th - 30th September 2023)</h1>
     <img src="https://obliviosa.net/assets/livsubathonchat.png" alt="chart go brrrr">
     
