--- a/stats/index.html
+++ b/stats/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obliviosa Subathon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<script src="https://kit.fontawesome.com/6824d55697.js" crossorigin="anonymous"></script>
     <style>
         body {
             background: linear-gradient(to bottom right, #004225 40%, #000000);
@@ -65,10 +65,10 @@
 <body>
     <div class="icons">
         <a href="https://twitch.tv/obliviosaofficial" target="_blank" title="Obliviosa on Twitch">
-            <i class="fab fa-twitch"></i>
+            <i class="fa-brands fa-twitch fa-2xl"></i>
         </a>
         <a href="https://instagram.com/obliviosaofficial" target="_blank" title="Obliviosa on Instagram">
-            <i class="fab fa-instagram"></i>
+            <i class="fa-brands fa-instagram fa-2xl"></i>
         </a>
     </div>
     <h1>Obliviosa Subathon (29th - 30th September 2023)</h1>
@@ -122,5 +122,9 @@
 <li>PandiPeruvi: 23 messages</li>
 <li>ysavibe and sammziee: 22 messages each</li>
     </ol>
+        <footer>
+        <p>Go watch Obliviosa on Twitch or even follow her on Instagram.</p>
+        <p>statpage made with 💖 by officiallysp (shane pepperell©️ 2023)</p>
+    </footer>
 </body>
 </html>
