--- a/stats/index.html
+++ b/stats/index.html
@@ -15,7 +15,7 @@
         }
         .icons {
             position: absolute;
-            top: 10px;
+            top: 15px;
             right: 15px;
         }
         .icons a {
@@ -52,7 +52,7 @@
         }
         footer {
             background-color: #004225;
-            padding: 15px;
+            padding: 10px;
             text-align: center;
             font-size: 14px;
             color: #f8c471;
@@ -123,8 +123,8 @@
 <li>ysavibe and sammziee: 22 messages each</li>
     </ol>
         <footer>
-        <p>Go watch Obliviosa on Twitch or even follow her on Instagram.</p>
-        <p>statpage made with 💖 by officiallysp (shane pepperell©️ 2023)</p>
+        <p>Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
+        <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023)</p>
     </footer>
 </body>
 </html>
