--- a/stats/index.html
+++ b/stats/index.html
@@ -52,13 +52,16 @@
         }
         footer {
             background-color: #004225;
-            padding: 10px;
+            padding: 5px;  /* Adjusted padding */
             text-align: center;
             font-size: 14px;
             color: #f8c471;
             position: fixed;
             width: 100%;
             bottom: 0;
+        }
+        a:visited {
+            color: #f8c471;  /* Added a:visited style */
         }
     </style>
 </head>
