--- a/stats/index.html
+++ b/stats/index.html
@@ -60,8 +60,17 @@
             width: 100%;
             bottom: 0;
         }
+        a {
+            color: #f8c471;  /* Original light orange color for links */
+        }
         a:visited {
-            color: #f8c471;  /* Added a:visited style */
+            color: #add8e6;  /* Light blue color for visited links */
+        }
+        a:hover {
+            color: #f0e68c;  /* Khaki color when mouse hovers over the link */
+        }
+        a:active {
+            color: #ff6347;  /* Tomato color when the link is being clicked */
         }
     </style>
 </head>
