--- a/stats/index.html
+++ b/stats/index.html
@@ -15,8 +15,8 @@
         }
         .icons {
             position: absolute;
-            top: 15px;
-            right: 15px;
+            top: 25px;
+            right: 25px;
         }
         .icons a {
             color: #f8c471;
@@ -30,7 +30,7 @@
         }
         img {
             width: 100%;
-            max-width: 1200px;
+            max-width: 1600px;
             height: auto;
             display: block;
             margin: auto;
@@ -52,7 +52,7 @@
         }
         footer {
             background-color: #004225;
-            padding: 5px;  /* Adjusted padding */
+            padding: 2px;
             text-align: center;
             font-size: 14px;
             color: #f8c471;
