--- a/stats/index.html
+++ b/stats/index.html
@@ -103,7 +103,7 @@
 <li>MoonlitAly and MrXadion: 142 messages each</li>
 <li>Tjorbjorn: 138 messages</li>
 <li>firesaffron: 124 messages</li>
-<li><strong>ObliviosaOfficial</strong>: 115 messages</li>
+<li><mark>ObliviosaOfficial</mark>: 115 messages</li>
 <li>PrizeGottiGaming and <em>WizeBot</em>: 105 messages each</li>
 <li>ph00kster: 101 messages</li>
 <li>BigTiddyGoff_: 97 messages</li>
@@ -116,7 +116,7 @@
 <li><strong>OSFrog</strong>: 71 messages</li>
 <li>BigDog_Q: 64 messages</li>
 <li>RD07x__: 60 messages</li>
-<li>willzystreams: 55 messages</li>
+<li><strong>willzystreams</strong>: 55 messages</li>
 <li>Dordin: 54 messages</li>
 <li>Buildingbob345: 47 messages</li>
 <li>BeholdBrooke: 46 messages</li>
