--- a/stats/index.html
+++ b/stats/index.html
@@ -56,7 +56,7 @@
             text-align: center;
             font-size: 14px;
             color: #f8c471;
-            position: fixed;
+            position: static;
             width: 100%;
             bottom: 0;
         }
