--- a/stats/index.html
+++ b/stats/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obliviosa Subathon</title>
+	<link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab">
     <script src="https://kit.fontawesome.com/6824d55697.js" crossorigin="anonymous"></script>
     <style>
         body {
@@ -16,6 +18,7 @@
         }
 
         .header {
+            background-color: rgba(255, 255, 255, 0.05);
             padding: 1px 10px;
             display: flex;
             justify-content: space-between;
@@ -76,9 +79,11 @@
         }
 		body {
 			line-height: 1.25;
+			font-family: 'Roboto', sans-serif;
 		}
 
 		h1, h2, h3, h4, h5, h6 {
+			font-family: 'Roboto Slab', serif;
 			color: #f8c471;
             padding-left: 15px;
         }
@@ -135,7 +140,6 @@
             align-items: center;
             flex-direction: row;
             background-color: rgba(255, 255, 255, 0.1);
-            /* semi-transparent background */
             border-radius: 10px;
         }
 
@@ -206,7 +210,7 @@
             <div class="dropdown">
                 <a href="#special-events">Special Events</a>
                 <div class="dropdown-content">
-                    <a href="ss2013.html">Subtember Subathon 2023</a>
+                    <a href="ss2023.html">Subtember Subathon 2023</a>
                 </div>
             </div>
             <div class="icons">
@@ -238,7 +242,8 @@
             </div>
         </div>
     </div>
-    <img src="https://www.obliviosa.net/assets/livsubathonchat.png" alt="Chart Unavailable">
+	<img src="../assets/livsubathonchat.png" alt="Chart Unavailable"/>
+	<p>Chart showing first 50 users. additional users are counted but displayed below in detail.</p>
     <h2>Detailed chat stats</h2>
     <p>Channel Mods are marked as <strong>bold</strong>. Bots are <em>italicised</em></p>
     <ol>
@@ -292,5 +297,4 @@
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023)</p>
     </footer>
 </body>
-
 </html>
