fixed chart on archive page

--- a/stats/event/ss2023.html
+++ b/stats/event/ss2023.html
@@ -242,7 +242,7 @@
             </div>
         </div>
     </div>
-	<img src="../assets/livsubathonchat.png" alt="Chart Unavailable"/>
+<img src="../../assets/livsubathonchat.png" alt="Chart Unavailable"/>
 	<p>Chart showing first 50 users. additional users are counted but displayed below in detail.</p>
     <h2>Detailed chat stats</h2>
     <p>Channel Mods are marked as <strong>bold</strong>. Bots are <em>italicised</em></p>
