--- a/stats/index.html
+++ b/stats/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obliviosa Subathon</title>
-	<link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab">
     <script src="https://kit.fontawesome.com/6824d55697.js" crossorigin="anonymous"></script>
     <style>
         body {
@@ -77,14 +76,20 @@
             font-size: 24px;
             text-decoration: none;
         }
-		body {
-			line-height: 1.25;
-			font-family: 'Roboto', sans-serif;
-		}
 
-		h1, h2, h3, h4, h5, h6 {
-			font-family: 'Roboto Slab', serif;
-			color: #f8c471;
+        body {
+            line-height: 1.25;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: 'Roboto Slab', serif;
+            color: #f8c471;
             padding-left: 15px;
         }
 
@@ -242,8 +247,8 @@
             </div>
         </div>
     </div>
-	<img src="../assets/livsubathonchat.png" alt="Chart Unavailable"/>
-	<p>Chart showing first 50 users. additional users are counted but displayed below in detail.</p>
+    <img src="../assets/livsubathonchat.png" alt="Chart Unavailable" />
+    <p>Chart showing first 50 users. additional users are counted but displayed below in detail.</p>
     <h2>Detailed chat stats</h2>
     <p>Channel Mods are marked as <strong>bold</strong>. Bots are <em>italicised</em></p>
     <ol>
@@ -297,4 +302,5 @@
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023)</p>
     </footer>
 </body>
+
 </html>
