--- a/stats/index.html
+++ b/stats/index.html
@@ -172,7 +172,7 @@
 </head>
 <script>
     // Set the date and time for the countdown to end (e.g., "October 30, 2023 15:00:00")
-    var countDownDate = new Date("November 1, 2023 15:00:00").getTime();
+    var countDownDate = new Date("December 1, 2023 15:00:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function() {
@@ -201,34 +201,9 @@
 
 <body>
     <div class="header">
-        <h1>Obliviosa Subathon (29th - 30th September 2023)</h1>
-        <div class="navbar">
-            <div class="dropdown">
-                <a href="/stats/index.html">Latest</a>
-            </div>
-            <div class="dropdown">
-                <a href="#archive">Archives</a>
-                <div class="dropdown-content">
-                    <a href="october_2023.html">October 2023</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="#special-events">Special Events</a>
-                <div class="dropdown-content">
-                    <a href="ss2023.html">Subtember Subathon 2023</a>
-                </div>
-            </div>
-            <div class="icons">
-                <a href="https://twitch.tv/obliviosaofficial" target="_blank" title="Obliviosa on Twitch">
-                    <i class="fa-brands fa-twitch fa-2x"></i>
-                </a>
-                <a href="https://instagram.com/obliviosaofficial" target="_blank" title="Obliviosa on Instagram">
-                    <i class="fa-brands fa-instagram fa-2x"></i>
-                </a>
-            </div>
-        </div>
-        <div id="timer">
-            <p>Next update in:</p>
+        <h1>Obliviosa Chatstats (October 2023)</h1>
+		<div id="timer">
+          <p>Next update in:</p>
             <div class="time-unit">
                 <span id="days"></span>
                 <p class="time-label">Days</p>
@@ -246,57 +221,84 @@
                 <p class="time-label">Seconds</p>
             </div>
         </div>
+        <div class="navbar">
+            <div class="dropdown">
+                <a href="/stats/index.html">Latest</a>
+            </div>
+            <div class="dropdown">
+                <a href="#archive">Archives</a>
+                <div class="dropdown-content">
+                    <a href="oct23.html">October 2023</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a href="#special-events">Special Events</a>
+                <div class="dropdown-content">
+                    <a href="ss2023.html">Subtember Subathon 2023</a>
+                </div>
+            </div>
+            <div class="icons">
+                <a href="https://twitch.tv/obliviosaofficial" target="_blank" title="Obliviosa on Twitch">
+                    <i class="fa-brands fa-twitch fa-2x"></i>
+                </a>
+                <a href="https://instagram.com/obliviosaofficial" target="_blank" title="Obliviosa on Instagram">
+                    <i class="fa-brands fa-instagram fa-2x"></i>
+                </a>
+            </div>
+        </div>
     </div>
-    <img src="../assets/livsubathonchat.png" alt="Chart Unavailable" />
-    <p>Chart showing first 50 users. additional users are counted but displayed below in detail.</p>
+    <img src="../assets/Figure_1.png" alt="Chart Unavailable" />
     <h2>Detailed chat stats</h2>
     <p>Channel Mods are marked as <strong>bold</strong>. Bots are <em>italicised</em></p>
     <ol>
-        <li>minoarno: 962 messages</li>
-        <li>extremedolphins: 919 messages</li>
-        <li><strong>AngleGabriel__</strong>: 611 messages</li>
-        <li>TheOneAndOnlyDo_: 391 messages</li>
-        <li>ItsChrisyBaby: 337 messages</li>
-        <li><strong>Phantomspower</strong>: 330 messages</li>
-        <li>OfficiallySp: 262 messages</li>
-        <li><em>Streamlabs</em>: 251 messages</li>
-        <li><strong>AKIBA212</strong>: 222 messages</li>
-        <li>Knight1y: 219 messages</li>
-        <li>KingCobraDK: 191 messages</li>
-        <li>MoonlitAly and MrXadion: 142 messages each</li>
-        <li>Tjorbjorn: 138 messages</li>
-        <li>firesaffron: 124 messages</li>
-        <li><mark>ObliviosaOfficial</mark>: 115 messages</li>
-        <li>PrizeGottiGaming and <em>WizeBot</em>: 105 messages each</li>
-        <li>ph00kster: 101 messages</li>
-        <li>BigTiddyGoff_: 97 messages</li>
-        <li>IcyUK: 95 messages</li>
-        <li><em>Nightbot</em>: 90 messages</li>
-        <li>Thicc_Loaf: 83 messages</li>
-        <li>JDGhosted and itzrezz12: 80 messages each</li>
-        <li>Neidorii: 78 messages</li>
-        <li>ayvottv: 74 messages</li>
-        <li><strong>OSFrog</strong>: 71 messages</li>
-        <li>BigDog_Q: 64 messages</li>
-        <li>RD07x__: 60 messages</li>
-        <li><strong>willzystreams</strong>: 55 messages</li>
-        <li>Dordin: 54 messages</li>
-        <li>Buildingbob345: 47 messages</li>
-        <li>BeholdBrooke: 46 messages</li>
-        <li>aclcgrimreever: 44 messages</li>
-        <li>JukusMaximuss: 41 messages</li>
-        <li>xxpoohdaddyxx: 40 messages</li>
-        <li>asurikae: 38 messages</li>
-        <li>DrDerpalot: 37 messages</li>
-        <li>LilacIsPurple: 35 messages</li>
-        <li>chiefbeef1234: 34 messages</li>
-        <li>Sheogorn and H0RNBY: 30 messages each</li>
-        <li>Shiique: 28 messages</li>
-        <li>destroyerjaan and Masterpav: 27 messages each</li>
-        <li><em>StreamElements</em>: 24 messages</li>
-        <li>PandiPeruvi: 23 messages</li>
-        <li>ysavibe and sammziee: 22 messages each</li>
-    </ol>
+<li>extremedolphins: 1164 messages</li>
+<li><strong>Phantomspower</strong>: 830 messages</li>
+<li><mark>ObliviosaOfficial</mark>: 627 messages</li>
+<li>OfficiallySp: 567 messages</li>
+<li>MrXadion: 436 messages</li>
+<li>Thicc_Loaf: 406 messages</li>
+<li>minoarno: 392 messages</li>
+<li><strong>OSFrog</strong>: 326 messages</li>
+<li>LowlifePrincesss: 312 messages</li>
+<li>TheOneAndOnlyDo_: 305 messages</li>
+<li>ItsChrisyBaby: 257 messages</li>
+<li>Knight1y: 214 messages</li>
+<li><strong>AngleGabriel__</strong>: 203 messages</li>
+<li>KingCobraDK and Streamlabs: 198 messages each</li>
+<li>Buildingbob345: 173 messages</li>
+<li>BeholdBrooke: 166 messages</li>
+<li><em>WizeBot</em>: 147 messages</li>
+<li><em>Nightbot</em>: 135 messages</li>
+<li>IcyUK: 117 messages</li>
+<li>PrizeGottiGaming: 114 messages</li>
+<li>starstruck: 110 messages</li>
+<li>firesaffron: 108 messages</li>
+<li><strong>AKIBA212</strong>: 101 messages</li>
+<li>BigDog_Q: 97 messages</li>
+<li>LilacIsPurple: 88 messages</li>
+<li>FaTtYShOw and ph00kster: 83 messages each</li>
+<li>TheRealMrHaXx: 82 messages</li>
+<li>LowlifePrincee: 80 messages</li>
+<li>asurikae: 77 messages</li>
+<li>aribearree: 76 messages</li>
+<li>kount_kai: 72 messages</li>
+<li><strong>willzystreams</strong> and itzrezz12: 70 messages each</li>
+<li>itzrezz12: 70 messages</li>
+<li>metajezza: 68 messages</li>
+<li>Lavs_Died: 67 messages</li>
+<li>oemsked: 65 messages</li>
+<li>slydoom123: 55 messages</li>
+<li>safeashell: 50 messages</li>
+<li>MoonlitAly and extremedolphin: 47 messages each</li>
+<li>SirJester2 and imperialninja: 46 messages each</li>
+<li>DrDerpalot: 44 messages</li>
+<li>chiefbeef1234: 43 messages</li>
+<li>TheUncommonLoon: 42 messages</li>
+<li>Janooobi: 40 messages</li>
+<li><em>PlayWithViewersBot</em>: 38 messages</li>
+<li><em>livytaskbot</em>: 37 messages</li>
+	</ol>
+		<h4>10743 Total Messages Logged from 219 Chat Participants</h4>
     <footer>
         <p>Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023)</p>
