--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
+<!DOCTYPE html>
+<style>
+        body {
+            background: #A9A9A9;
+        }
+</style>
 liv is a nerd<br>
 
-There is nothing here at the moment.
+There is nothing here at the moment.<br>
 in the meantime. Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a>
-or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.
+or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.<br>
+
+<iframe src="https://player.twitch.tv/?channel=obliviosaofficial&parent=obliviosa.net" frameborder="1" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+<iframe
+  id="chat_embed"
+  src="https://www.twitch.tv/embed/obliviosaofficial/chat?parent=obliviosa.net"
+  height="500"
+  width="350">
+</iframe>
