--- a/stats/event/ss2023.html
+++ b/stats/event/ss2023.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Obliviosa Subathon</title>
+    <title>Obliviosa Chatstats</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab">
     <script src="https://kit.fontawesome.com/6824d55697.js" crossorigin="anonymous"></script>
     <style>
@@ -172,7 +172,7 @@
 </head>
 <script>
     // Set the date and time for the countdown to end (e.g., "October 30, 2023 15:00:00")
-    var countDownDate = new Date("November 1, 2023 15:00:00").getTime();
+    var countDownDate = new Date("December 1, 2023 15:00:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function() {
@@ -201,34 +201,9 @@
 
 <body>
     <div class="header">
-        <h1>Obliviosa Subathon (29th - 30th September 2023)</h1>
-        <div class="navbar">
-            <div class="dropdown">
-                <a href="/stats/index.html">Latest</a>
-            </div>
-            <div class="dropdown">
-                <a href="#archive">Archives</a>
-                <div class="dropdown-content">
-                    <a href="october_2023.html">October 2023</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="#special-events">Special Events</a>
-                <div class="dropdown-content">
-                    <a href="ss2023.html">Subtember Subathon 2023</a>
-                </div>
-            </div>
-            <div class="icons">
-                <a href="https://twitch.tv/obliviosaofficial" target="_blank" title="Obliviosa on Twitch">
-                    <i class="fa-brands fa-twitch fa-2x"></i>
-                </a>
-                <a href="https://instagram.com/obliviosaofficial" target="_blank" title="Obliviosa on Instagram">
-                    <i class="fa-brands fa-instagram fa-2x"></i>
-                </a>
-            </div>
-        </div>
-        <div id="timer">
-            <p>Next update in:</p>
+        <h1>Obliviosa Subathon (September 2023)</h1>
+		<div id="timer">
+          <p>Next update in:</p>
             <div class="time-unit">
                 <span id="days"></span>
                 <p class="time-label">Days</p>
@@ -244,6 +219,31 @@
             <div class="time-unit">
                 <span id="seconds"></span>
                 <p class="time-label">Seconds</p>
+            </div>
+        </div>
+        <div class="navbar">
+            <div class="dropdown">
+                <a href="/stats/index.html">Latest</a>
+            </div>
+            <div class="dropdown">
+                <a href="#archive">Archives</a>
+                <div class="dropdown-content">
+                    <a href="oct23.html">October 2023</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a href="#special-events">Special Events</a>
+                <div class="dropdown-content">
+                    <a href="ss2023.html">Subtember Subathon 2023</a>
+                </div>
+            </div>
+            <div class="icons">
+                <a href="https://twitch.tv/obliviosaofficial" target="_blank" title="Obliviosa on Twitch">
+                    <i class="fa-brands fa-twitch fa-2x"></i>
+                </a>
+                <a href="https://instagram.com/obliviosaofficial" target="_blank" title="Obliviosa on Instagram">
+                    <i class="fa-brands fa-instagram fa-2x"></i>
+                </a>
             </div>
         </div>
     </div>
