streamlabs is a bot lol

--- a/stats/index.html
+++ b/stats/index.html
@@ -264,7 +264,7 @@
 <li>ItsChrisyBaby: 257 messages</li>
 <li>Knight1y: 214 messages</li>
 <li><strong>AngleGabriel__</strong>: 203 messages</li>
-<li>KingCobraDK and Streamlabs: 198 messages each</li>
+<li>KingCobraDK and <em>Streamlabs: 198 messages each</em></li>
 <li>Buildingbob345: 173 messages</li>
 <li>BeholdBrooke: 166 messages</li>
 <li><em>WizeBot</em>: 147 messages</li>
