--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </style>
 liv is a nerd<br>
 
-There is nothing here at the moment.<br>
+There is nothing here at the moment. i have no idea what to put here<br>
+if you're looking for chatstats <a href="https://obliviosa.net/stats">Go Here</a><br>
 in the meantime. Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a>
 or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.<br>
 
