--- a/stats/event/ss2023.html
+++ b/stats/event/ss2023.html
@@ -229,6 +229,7 @@
                 <a href="#archive">Archives</a>
                 <div class="dropdown-content">
                     <a href="/stats/archive/oct23.html">October 2023</a>
+					<a href="/stats/archive/nov23.html">November 2023</a>
                 </div>
             </div>
             <div class="dropdown">
