fixed global navbar

--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -1,6 +1,6 @@
 <nav>
 <div class="header">
-        <h1>Obliviosa Chatstats (November 2023)</h1>
+        <h1>Obliviosa Chatstats</h1>
 		<div id="timer">
           <p>Next update in:</p>
             <div class="time-unit">
