--- a/stats/event/ss2023.html
+++ b/stats/event/ss2023.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="/stats/styles.css">
     <script src="https://kit.fontawesome.com/6824d55697.js" crossorigin="anonymous"></script>
 </head>
-<script type="text/javascript" src="/stats/main.js"></script>
+<script type="text/javascript" src="../main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
 	<h1>Obliviosa Subathon (September 2023)</h1>
