--- a/stats/index.html
+++ b/stats/index.html
@@ -12,63 +12,64 @@
 <script type="text/javascript" src="main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>November 2023</h1>
-    <img src="../assets/Figure_1.png" alt="Chart Unavailable" />
-    <h2>Detailed chat stats</h2>
+	<h1>December 2023</h1>
+    <img src="../assets/December23.png" alt="Chart Unavailable"/>
+<h2>Detailed chat stats</h2>
+    <h5>Stats this month include 14 hour end of year stream</h5>
     <p>Channel Mods are marked as <strong>bold</strong>. Bots are <em>italicised</em></p>
-    <ol>
-<li><strong>Phantomspower</strong>: 1214 messages</li>
-<li>ItsChrisyBaby: 831 messages</li>
-<li><mark>ObliviosaOfficial</mark>: 482 messages</li>
-<li>TheOneAndOnlyDo_: 377 messages</li>
-<li><em>Streamlabs</em>: 351 messages</li>
-<li>MrXadion: 344 messages</li>
-<li>Blurrp: 302 messages</li>
-<li>OfficiallySp: 285 messages</li>
-<li>VelvetGeisha: 212 messages</li>
-<li>Thicc_Loaf: 177 messages</li>
-<li>KingCobraDK: 128 messages</li>
-<li>BigDog_Q: 123 messages</li>
-<li><em>WizeBot</em>: 123 messages</li>
-<li><em>Nightbot</em>: 120 messages</li>
-<li><strong>AKIBA212</strong>: 118 messages</li>
-<li>MoonlitAly: 114 messages</li>
-<li>Knight1y: 113 messages</li>
-<li>chiefbeef1234: 110 messages</li>
-<li>sergmist97: 99 messages</li>
-<li>firesaffron: 91 messages</li>
-<li><strong>OSFrog</strong>: 89 messages</li>
-<li>dali_khe: 84 messages</li>
-<li>zumal1i: 78 messages</li>
-<li>emilauss: 74 messages</li>
-<li>TheJukus: 74 messages</li>
-<li>monitor4821: 71 messages</li>
-<li>PrizeGottiGaming: 70 messages</li>
-<li>zaysfnafworld: 66 messages</li>
-<li>Janooobi: 64 messages</li>
-<li>ayvottv: 64 messages</li>
-<li>Buildingbob345: 63 messages</li>
-<li>folliaght_j: 57 messages</li>
-<li>xxpoohdaddyxx: 56 messages</li>
-<li>minoarno: 55 messages</li>
-<li>oemsked: 54 messages</li>
-<li>girldon: 52 messages</li>
-<li>RAMIdotGG: 51 messages</li>
-<li>BigBangRay: 43 messages</li>
-<li><em>StreamElements</em>: 43 messages</li>
-<li>BeholdBrooke: 43 messages</li>
-<li>IcyUK: 42 messages</li>
-<li>jasea1006: 41 messages</li>
-<li>OKAYBLAST: 41 messages</li>
-<li>MeshThaa: 41 messages</li>
-<li>RD07x__: 39 messages</li>
-<li>Xylais: 38 messages</li>
-<li><strong>AngleGabriel__</strong>: 36 messages</li>
-<li>Tjorbjorn: 36 messages</li>
-<li>alericocoooo: 35 messages</li>
-<li>aribearree: 34 messages</li>
-	</ol>
-		<h4>8442 Total messages Logged from 186 Chat Participants over 10 Streams</h4>
+<ol>
+  <li>minoarno: 1180 messages</li>
+		<li>OfficiallySp: 1048 messages</li>
+		<li><strong>Phantomspower</strong>: 780 messages</li>
+		<li>ItsChrisyBaby: 741 messages</li>
+		<li><mark>ObliviosaOfficial</mark>: 401 messages</li>
+		<li>LowlifePrincessx: 357 messages</li>
+		<li>MrXadion: 343 messages</li>
+		<li>emilauss: 329 messages</li>
+		<li><em>Streamlabs</em>: 272 messages</li>
+		<li>TheOneAndOnlyDo_: 266 messages</li>
+		<li><strong>Knight1y</strong>: 237 messages</li>
+		<li><em>Nightbot</em>: 156 messages</li>
+		<li>LowlifePrincex: 140 messages</li>
+		<li>KingCobraDK: 139 messages</li>
+		<li><strong>AKIBA212</strong> and MoonlitAly: 138 messages each</li>
+		<li>Blurrp, RD07x__ and Tjorbjorn: 136 messages each</li>
+		<li><strong>AngleGabriel__</strong>: 131 messages</li>
+		<li>AttemptHouse: 119 messages</li>
+		<li>girldon: 117 messages</li>
+		<li>extremedolphins and BigBangRay: 115 messages each</li>
+		<li>mikeyuchiha: 104 messages</li>
+		<li>Janooobi: 102 messages</li>
+		<li>Thicc_Loaf: 100 messages</li>
+		<li>firesaffron: 98 messages</li>
+		<li><em>WizeBot</em>: 94 messages</li>
+		<li>oemsked: 86 messages</li>
+		<li>BeholdBrooke: 82 messages</li>
+		<li>Matt_Eversman: 80 messages</li>
+		<li><strong>OSFrog</strong>: 72 messages</li>
+		<li>sergmist97: 71 messages</li>
+		<li>BigDog_Q: 69 messages</li>
+		<li>ra_von: 64 messages</li>
+		<li><em>PlayWithViewersBot</em>: 63 messages</li>
+		<li>MeshThaa: 62 messages</li>
+		<li>FeiTFR: 60 messages</li>
+		<li>chiefbeef1234: 51 messages</li>
+		<li>ayvottv and CezarNorge: 50 messages each</li>
+		<li>MagnoliaBobatry and <em>StreamElements</em>: 49 messages</li>
+		<li>Xylais: 48 messages</li>
+		<li>ph00kster: 47 messages</li>
+		<li>toxic_fusions1: 46 messages</li>
+		<li>alericocoooo: 42 messages</li>
+		<li>JoshuaMbh: 41 messages</li>
+		<li>YellowFlashA9: 38 messages</li>
+		<li>PrizeGottiGaming and deadkid54: 37 messages each</li>
+		<li>ATEL0PHOBlA and MaicoMolo: 35 messages each</li>
+		<li>NakeyKing: 34 messages</li>
+		<li>xxpoohdaddyxx: 31 messages</li>
+		<li>Blackl0ud and OKAYBLAST: 30 messages each</li>
+		<li>Rhyer25: 28 messages</li>
+</ol>
+		<h4>10886 Total messages Logged from 241 Chat Participants over 8 Streams</h4>
     <footer>
         <p>Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023)</p>
