--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -29,6 +29,7 @@
                 <div class="dropdown-content">
                     <a href="/stats/archive/oct23.html">October 2023</a>
 					<a href="/stats/archive/nov23.html">November 2023</a>
+					<a href="/stats/archive/dec23.html">November 2023</a>
                 </div>
             </div>
             <div class="dropdown">
