--- a/stats/index.html
+++ b/stats/index.html
@@ -16,7 +16,7 @@
     <img src="../assets/December23.png" alt="Chart Unavailable"/>
 <h2>Detailed chat stats</h2>
     <h5>Stats this month include 14 hour end of year stream</h5>
-    <p>Channel Mods are marked as <strong>bold</strong>. Bots are <em>italicised</em></p>
+    <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
   <li>minoarno: 1180 messages</li>
 		<li>OfficiallySp: 1048 messages</li>
