--- a/stats/index.html
+++ b/stats/index.html
@@ -18,23 +18,23 @@
     <h5>Stats this month include 14 hour end of year stream</h5>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
-  <li>minoarno: 1180 messages</li>
+  		<li>minoarno: 1180 messages</li>
 		<li>OfficiallySp: 1048 messages</li>
-		<li><strong>Phantomspower</strong>: 780 messages</li>
+		<li>Phantomspower: 780 messages</li>
 		<li>ItsChrisyBaby: 741 messages</li>
 		<li><mark>ObliviosaOfficial</mark>: 401 messages</li>
 		<li>LowlifePrincessx: 357 messages</li>
 		<li>MrXadion: 343 messages</li>
 		<li>emilauss: 329 messages</li>
-		<li><em>Streamlabs</em>: 272 messages</li>
+		<li>Streamlabs: 272 messages</li>
 		<li>TheOneAndOnlyDo_: 266 messages</li>
-		<li><strong>Knight1y</strong>: 237 messages</li>
-		<li><em>Nightbot</em>: 156 messages</li>
+		<li>Knight1y: 237 messages</li>
+		<li>Nightbot: 156 messages</li>
 		<li>LowlifePrincex: 140 messages</li>
 		<li>KingCobraDK: 139 messages</li>
-		<li><strong>AKIBA212</strong> and MoonlitAly: 138 messages each</li>
+		<li>AKIBA212 and MoonlitAly: 138 messages each</li>
 		<li>Blurrp, RD07x__ and Tjorbjorn: 136 messages each</li>
-		<li><strong>AngleGabriel__</strong>: 131 messages</li>
+		<li>AngleGabriel__: 131 messages</li>
 		<li>AttemptHouse: 119 messages</li>
 		<li>girldon: 117 messages</li>
 		<li>extremedolphins and BigBangRay: 115 messages each</li>
@@ -42,20 +42,20 @@
 		<li>Janooobi: 102 messages</li>
 		<li>Thicc_Loaf: 100 messages</li>
 		<li>firesaffron: 98 messages</li>
-		<li><em>WizeBot</em>: 94 messages</li>
+		<li>WizeBot: 94 messages</li>
 		<li>oemsked: 86 messages</li>
 		<li>BeholdBrooke: 82 messages</li>
 		<li>Matt_Eversman: 80 messages</li>
-		<li><strong>OSFrog</strong>: 72 messages</li>
+		<li>OSFrog: 72 messages</li>
 		<li>sergmist97: 71 messages</li>
 		<li>BigDog_Q: 69 messages</li>
 		<li>ra_von: 64 messages</li>
-		<li><em>PlayWithViewersBot</em>: 63 messages</li>
+		<li>PlayWithViewersBot: 63 messages</li>
 		<li>MeshThaa: 62 messages</li>
 		<li>FeiTFR: 60 messages</li>
 		<li>chiefbeef1234: 51 messages</li>
 		<li>ayvottv and CezarNorge: 50 messages each</li>
-		<li>MagnoliaBobatry and <em>StreamElements</em>: 49 messages</li>
+		<li>MagnoliaBobatry and StreamElements: 49 messages</li>
 		<li>Xylais: 48 messages</li>
 		<li>ph00kster: 47 messages</li>
 		<li>toxic_fusions1: 46 messages</li>
