manually marking vips and mods
it doesnt mark multiple people on the line so this is a quick and dirty fix

--- a/stats/index.html
+++ b/stats/index.html
@@ -32,9 +32,9 @@
 		<li>Nightbot: 156 messages</li>
 		<li>LowlifePrincex: 140 messages</li>
 		<li>KingCobraDK: 139 messages</li>
-		<li>AKIBA212 and MoonlitAly: 138 messages each</li>
-		<li>Blurrp, RD07x__ and Tjorbjorn: 136 messages each</li>
-		<li>AngleGabriel__: 131 messages</li>
+		<li><em>AKIBA212</em> and MoonlitAly: 138 messages each</li>
+		<li>Blurrp, <strong>RD07x__</strong> and <strong>Tjorbjorn</strong>: 136 messages each</li>
+		<li><em>AngleGabriel__: 131 messages</em></li>
 		<li>AttemptHouse: 119 messages</li>
 		<li>girldon: 117 messages</li>
 		<li>extremedolphins and BigBangRay: 115 messages each</li>
@@ -46,7 +46,7 @@
 		<li>oemsked: 86 messages</li>
 		<li>BeholdBrooke: 82 messages</li>
 		<li>Matt_Eversman: 80 messages</li>
-		<li>OSFrog: 72 messages</li>
+		<li><em>OSFrog: 72 messages</em></li>
 		<li>sergmist97: 71 messages</li>
 		<li>BigDog_Q: 69 messages</li>
 		<li>ra_von: 64 messages</li>
