--- a/scale.html
+++ b/scale.html
@@ -148,7 +148,17 @@ function initComparisons() {
   </div>
 </div>
 <hr>
-<h3>4. Native (Left) VS RealESRGAN (Right)</h3>
+<h3>4. Native (Left) VS RTX Super Res Quality (Right)</h3>
+<div class="img-comp-container">
+  <div class="img-comp-img">
+    <img src="assets/scale/liv2x.png" width="1366" height="760">
+  </div>
+  <div class="img-comp-img img-comp-overlay">
+    <img src="assets/scale/livref.png" width="1366" height="760">
+  </div>
+</div>
+<hr>
+<h3>5. Native (Left) VS RealESRGAN (Right)</h3>
 <div class="img-comp-container">
   <div class="img-comp-img">
     <img src="assets/scale/liv3x.png" width="1366" height="760">
